backend/canisters/backend/err.log
btwl@btwl-virtual-machine:~/Desktop/ic/tax_lint$ fish
Welcome to fish, the friendly interactive shell
Type help for instructions on how to use fish
btwl@btwl-virtual-machine ~/D/i/tax_lint (master)> cargo build --target wasm32-unknown-unknown --release -p backen
d --locked
   Compiling pocket-ic v2.0.1
   Compiling ic-agent v0.30.2
error[E0432]: unresolved import `reqwest::blocking`
 --> /home/btwl/.cargo/registry/src/index.crates.io-6f17d22bba15001f/pocket-ic-2.0.1/src/common/rest.rs:9:14
  |
9 | use reqwest::blocking::Response;
  |              ^^^^^^^^ could not find `blocking` in `reqwest`

error[E0004]: non-exhaustive patterns: `Some(_)` not covered
   --> /home/btwl/.cargo/registry/src/index.crates.io-6f17d22bba15001f/ic-agent-0.30.2/src/agent/mod.rs:691:19
    |
691 |             match retry_policy.next_backoff() {
    |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^ pattern `Some(_)` not covered
    |
note: `std::option::Option<std::time::Duration>` defined here
   --> /home/btwl/snap/rustup/common/rustup/toolchains/stable-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core/src/option.rs:571:5
    |
563 | pub enum Option<T> {
    | ------------------
...
571 |     Some(#[stable(feature = "rust1", since = "1.0.0")] T),
    |     ^^^^ not covered
    = note: the matched value is of type `std::option::Option<std::time::Duration>`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
    |
711 ~                 None => return Err(AgentError::TimeoutWaitingForResponse()),
712 ~                 Some(_) => todo!(),
    |

error[E0433]: failed to resolve: could not find `blocking` in `reqwest`
   --> /home/btwl/.cargo/registry/src/index.crates.io-6f17d22bba15001f/pocket-ic-2.0.1/src/lib.rs:156:30
    |
156 |     reqwest_client: reqwest::blocking::Client,
    |                              ^^^^^^^^ could not find `blocking` in `reqwest`

error[E0433]: failed to resolve: could not find `unix` in `os`
   --> /home/btwl/.cargo/registry/src/index.crates.io-6f17d22bba15001f/pocket-ic-2.0.1/src/lib.rs:172:35
    |
172 |         let parent_pid = std::os::unix::process::parent_id();
    |                                   ^^^^ could not find `unix` in `os`

error[E0433]: failed to resolve: could not find `blocking` in `reqwest`
   --> /home/btwl/.cargo/registry/src/index.crates.io-6f17d22bba15001f/pocket-ic-2.0.1/src/lib.rs:674:61
    |
674 |     fn check_response<T: DeserializeOwned>(result: reqwest::blocking::Response) -> T {
    |                                                             ^^^^^^^^ could not find `blocking` in `reqwest`

error[E0433]: failed to resolve: could not find `unix` in `os`
    --> /home/btwl/.cargo/registry/src/index.crates.io-6f17d22bba15001f/pocket-ic-2.0.1/src/lib.rs:1080:31
     |
1080 |     let parent_pid = std::os::unix::process::parent_id();
     |                               ^^^^ could not find `unix` in `os`

error[E0433]: failed to resolve: could not find `blocking` in `reqwest`
   --> /home/btwl/.cargo/registry/src/index.crates.io-6f17d22bba15001f/pocket-ic-2.0.1/src/lib.rs:176:39
    |
176 |         let reqwest_client = reqwest::blocking::Client::new();
    |                                       ^^^^^^^^ could not find `blocking` in `reqwest`
    |
help: consider importing this struct
    |
34  + use reqwest::Client;
    |
help: if you import `Client`, refer to it directly
    |
176 -         let reqwest_client = reqwest::blocking::Client::new();
176 +         let reqwest_client = Client::new();
    |

error[E0433]: failed to resolve: could not find `blocking` in `reqwest`
   --> /home/btwl/.cargo/registry/src/index.crates.io-6f17d22bba15001f/pocket-ic-2.0.1/src/lib.rs:264:47
    |
264 |         let instances: Vec<String> = reqwest::blocking::Client::new()
    |                                               ^^^^^^^^ could not find `blocking` in `reqwest`
    |
help: consider importing this struct
    |
34  + use reqwest::Client;
    |
help: if you import `Client`, refer to it directly
    |
264 -         let instances: Vec<String> = reqwest::blocking::Client::new()
264 +         let instances: Vec<String> = Client::new()
    |

error[E0433]: failed to resolve: could not find `blocking` in `reqwest`
   --> /home/btwl/.cargo/registry/src/index.crates.io-6f17d22bba15001f/pocket-ic-2.0.1/src/lib.rs:283:18
    |
283 |         reqwest::blocking::Client::new()
    |                  ^^^^^^^^ could not find `blocking` in `reqwest`
    |
help: consider importing this struct
    |
34  + use reqwest::Client;
    |
help: if you import `Client`, refer to it directly
    |
283 -         reqwest::blocking::Client::new()
283 +         Client::new()
    |

error[E0308]: mismatched types
  --> /home/btwl/.cargo/registry/src/index.crates.io-6f17d22bba15001f/ic-agent-0.30.2/src/agent/http_transport/reqwest_transport.rs:37:47
   |
37 |     pub fn create<U: Into<String>>(url: U) -> Result<Self, AgentError> {
   |            ------                             ^^^^^^^^^^^^^^^^^^^^^^^^ expected `Result<ReqwestTransport, ...>`, found `()`
   |            |
   |            implicitly returns `()` as its body has no tail or `return` expression
   |
   = note:   expected enum `Result<ReqwestTransport, AgentError>`
           found unit type `()`

Some errors have detailed explanations: E0004, E0308.
For more information about an error, try `rustc --explain E0004`.
error: could not compile `ic-agent` (lib) due to 2 previous errors
warning: build failed, waiting for other jobs to finish...
Some errors have detailed explanations: E0432, E0433.
For more information about an error, try `rustc --explain E0432`.
error: could not compile `pocket-ic` (lib) due to 8 previous errors